--- a/index.html
+++ b/index.html
@@ -198,24 +198,6 @@
           </div>
           <!-- End Stats Item -->
 
-          <!-- <div class="col-lg-3 col-md-6">
-            <div class="stats-item">
-              <i class="bi bi-headset"></i>
-              <span data-purecounter-start="0" data-purecounter-end="1453" data-purecounter-duration="1" class="purecounter"></span>
-              <p><strong>Hours Of Support</strong> <span>aut commodi quaerat</span></p>
-            </div>
-          </div> -->
-          <!-- End Stats Item -->
-
-          <!-- <div class="col-lg-3 col-md-6">
-            <div class="stats-item">
-              <i class="bi bi-people"></i>
-              <span data-purecounter-start="0" data-purecounter-end="32" data-purecounter-duration="1" class="purecounter"></span>
-              <p><strong>Hard Workers</strong> <span>rerum asperiores dolor</span></p>
-            </div>
-          </div> -->
-          <!-- End Stats Item -->
-
         </div>
 
       </div>
@@ -228,7 +210,6 @@
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h2>Skills</h2>
-        <!-- <p>Necessitatibus eius consequatur ex aliquid fuga eum quidem sint consectetur velit</p> -->
       </div><!-- End Section Title -->
 
       <div class="container" data-aos="fade-up" data-aos-delay="100">
@@ -366,69 +347,108 @@
 
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
-        <h2>Resume</h2>
-        <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+        <h2>
+          Resume  
+          <a href="./assets/resumes/Deval_Pandya_Resume.pdf" target="_blank">
+            <i class="bi bi-download fs-4"></i>
+          </a>
+        </h2> 
       </div><!-- End Section Title -->
 
       <div class="container">
 
-        <div class="row">
+        <div class="row justify-content-center">
 
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
             <h3 class="resume-title">Sumary</h3>
 
             <div class="resume-item pb-0">
-              <h4>Brandon Johnson</h4>
-              <p><em>Innovative and deadline-driven Graphic Designer with 3+ years of experience designing and developing user-centered digital/print marketing material from initial concept to final, polished deliverable.</em></p>
+              <h4>Deval Pandya</h4>
+              <p><em>Versatile Computer Science graduate with a robust academic foundation, including a 4.0 GPA in
+                a Master's program from Arizona State University, and hands-on experience in data analysis,
+                machine learning, and software engineering. Proven ability to develop scalable ML pipelines,
+                optimize complex systems, and lead high-impact projects, demonstrated through internships
+                and professional roles at JP Morgan Chase, ANB Systems, and research contributions at
+                Arizona State University.</em></p>
               <ul>
-                <li>Portland par 127,Orlando, FL</li>
-                <li>(123) 456-7891</li>
-                <li>alice.barkley@example.com</li>
+                <li>Phoenix, AZ</li>
+                <li>+1-512-412-0861</li>
+                <li>devaljpandya@gmail.com</li>
               </ul>
-            </div><!-- Edn Resume Item -->
+            </div><!-- End Resume Item -->
 
             <h3 class="resume-title">Education</h3>
             <div class="resume-item">
-              <h4>Master of Fine Arts &amp; Graphic Design</h4>
-              <h5>2015 - 2016</h5>
-              <p><em>Rochester Institute of Technology, Rochester, NY</em></p>
-              <p>Qui deserunt veniam. Et sed aliquam labore tempore sed quisquam iusto autem sit. Ea vero voluptatum qui ut dignissimos deleniti nerada porti sand markend</p>
-            </div><!-- Edn Resume Item -->
+              <h4>Master of Science - Computer Science</h4>
+              <h5>2022 - 2024</h5>
+              <p><em>Arizona State University, Tempe, AZ</em></p>
+              <p>GPA: 4.0 out of 4.0</p>
+            </div><!-- End Resume Item -->
 
             <div class="resume-item">
-              <h4>Bachelor of Fine Arts &amp; Graphic Design</h4>
-              <h5>2010 - 2014</h5>
-              <p><em>Rochester Institute of Technology, Rochester, NY</em></p>
-              <p>Quia nobis sequi est occaecati aut. Repudiandae et iusto quae reiciendis et quis Eius vel ratione eius unde vitae rerum voluptates asperiores voluptatem Earum molestiae consequatur neque etlon sader mart dila</p>
-            </div><!-- Edn Resume Item -->
+              <h4>Bachelor of Technology - Computer Engineering</h4>
+              <h5>2016 - 2020</h5>
+              <p><em>Sardar Vallabhbhai National Institute of Technology, Surat, GJ</em></p>
+              <p>GPA: 8.04 out of 10.0</p>
+            </div><!-- End Resume Item -->
 
-          </div>
+          <!-- </div>
 
-          <div class="col-lg-6" data-aos="fade-up" data-aos-delay="200">
+          <div class="col-lg-6" data-aos="fade-up" data-aos-delay="200"> -->
             <h3 class="resume-title">Professional Experience</h3>
             <div class="resume-item">
-              <h4>Senior graphic design specialist</h4>
-              <h5>2019 - Present</h5>
-              <p><em>Experion, New York, NY </em></p>
+              <h4>Data Analyst Intern</h4>
+              <h5>January 2024 - May 2024</h5>
+              <p><em>ANB Systems LLC, Houston, TX</em></p>
               <ul>
-                <li>Lead in the design, development, and implementation of the graphic, layout, and production communication materials</li>
-                <li>Delegate tasks to the 7 members of the design team and provide counsel on all aspects of the project. </li>
-                <li>Supervise the assessment of all graphic materials in order to ensure quality and accuracy of the design</li>
-                <li>Oversee the efficient use of production project budgets ranging from $2,000 - $25,000</li>
+                <li>Developed and deployed a scalable, automated ML pipeline using AWS services to streamline model training, improving turnaround time and resource efficiency for various ML models</li>
+                <li>Enhanced the company’s existing ML architecture by integrating active learning mechanisms and standardizing workflows, resulting in significant reduction of manual processes and enabling seamless future model integration and updates.</li>
               </ul>
-            </div><!-- Edn Resume Item -->
+            </div><!-- End Resume Item -->
 
             <div class="resume-item">
-              <h4>Graphic design specialist</h4>
-              <h5>2017 - 2018</h5>
-              <p><em>Stepping Stone Advertising, New York, NY</em></p>
+              <h4>Research Aide</h4>
+              <h5>November 2022 - January 2024</h5>
+              <p><em>Arizona State University, Tempe, AZ</em></p>
               <ul>
-                <li>Developed numerous marketing programs (logos, brochures,infographics, presentations, and advertisements).</li>
-                <li>Managed up to 5 projects or tasks at a given time while under pressure</li>
-                <li>Recommended and consulted with clients on the most appropriate graphic design</li>
-                <li>Created 4+ design presentations and proposals a month for clients and account managers</li>
+                <li>Performance tuned a CNN-LSTM model to predict the trajectory of an airplane based on its 3 control surfaces in a NASA project.</li>
+                <li>Achieved precision of upto 0.04 mm for predicting the location of a solder joint crack on a PCB using AE sensor data in an Intel Project.</li>
               </ul>
-            </div><!-- Edn Resume Item -->
+            </div><!-- End Resume Item -->
+
+            <div class="resume-item">
+              <h4>Software Engineer</h4>
+              <h5>August 2020 - August 2022</h5>
+              <p><em>JP Morgan Chase, Mumbai, MH</em></p>
+              <ul>
+                <li>Managed to reduce the overhead of a critical application by 90% along with increasing its availability and performance.</li>
+                <li>Solved several production issues as well as security vulnerabilities and also took part in many production deployments for the products.</li>
+                <li>Successfully achieved a modernization task for an application by updating its authentication methods from SAML to OAuth2.</li>
+                <li>Developed and optimized efficient SQL routines and procedures for multiple applications.</li>
+              </ul>
+            </div><!-- End Resume Item -->
+
+            <div class="resume-item">
+              <h4>Software Engineer Intern</h4>
+              <h5>May 2019 - July 2019</h5>
+              <p><em>JP Morgan Chase, Mumbai, MH</em></p>
+              <ul>
+                <li>Created a cloud-native chatbot for helping new hires with the on-boarding process interactively.</li>
+                <li>Developed features like following various story lines to help the user with the process.</li>
+                <li>Utilized Kubernetes clusters to host back-end and front-end servers for improving performance, security and availability.</li>
+              </ul>
+            </div><!-- End Resume Item -->
+
+            <div class="resume-item">
+              <h4>Summer Intern</h4>
+              <h5>May 2018 - July 2018</h5>
+              <p><em>MobileFirst Application, Ahmedabad, GJ</em></p>
+              <ul>
+                <li>Implemented basic sentimental analysis on tweets using NLP and probabilistic models.</li>
+                <li>Developed a portable air quality checker using various gas sensors to collect appropriate data.</li>
+                <li>The collected data is then sent to an online database using the WiFi module.</li>
+              </ul>
+            </div><!-- End Resume Item -->
 
           </div>
 
