--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
 
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
-        <h2>Skills</h2>
+        <h2 class="justify-content-center">Skills</h2>
       </div><!-- End Section Title -->
 
       <div class="container" data-aos="fade-up" data-aos-delay="100">
@@ -349,10 +349,8 @@
       <div class="container section-title" data-aos="fade-up">
         <h2>
           Resume  
-          <a href="./assets/resumes/Deval_Pandya_Resume.pdf" target="_blank">
-            <i class="bi bi-download fs-4"></i>
-          </a>
         </h2> 
+        <a href="./assets/resumes/Deval_Pandya_Resume.pdf" target="_blank"><i class="bi bi-download fs-4"></i></a>
       </div><!-- End Section Title -->
 
       <div class="container">
