--- a/index.html
+++ b/index.html
@@ -836,7 +836,7 @@
 
       <div class="container" data-aos="fade-up" data-aos-delay="100">
 
-        <div class="row gy-4">
+        <div class="row gy-4 justify-content-center">
 
           <div class="col-lg-5">
 
@@ -869,7 +869,7 @@
             </div>
           </div>
 
-          <div class="col-lg-7">
+          <!-- <div class="col-lg-7">
             <form action="forms/contact.php" method="post" class="php-email-form" data-aos="fade-up" data-aos-delay="200">
               <div class="row gy-4">
 
@@ -903,7 +903,8 @@
 
               </div>
             </form>
-          </div><!-- End Contact Form -->
+          </div> -->
+          <!-- End Contact Form -->
 
         </div>
 
