--- a/portfolio/video-frame-interpolation.html
+++ b/portfolio/video-frame-interpolation.html
@@ -78,7 +78,7 @@
     <!-- Page Title -->
     <div class="page-title dark-background">
       <div class="container d-lg-flex justify-content-between align-items-center">
-        <h1 class="mb-2 mb-lg-0">VAST Challenge 2021 Mini-Challenge 2</h1>
+        <h1 class="mb-2 mb-lg-0">Video Frame Interpolation Through Adaptive Separable Convolution</h1>
         <nav class="breadcrumbs">
           <ol>
             <li><a href="../index.html">Home</a></li>
@@ -117,32 +117,32 @@
               <div class="swiper-wrapper align-items-center">
 
                 <div class="swiper-slide">
-                  <img src="../assets/img/portfolio/vast-mc/1.png" alt="">
+                  <img src="../assets/img/portfolio/video-frame-interpolation/1.png" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="../assets/img/portfolio/vast-mc/2.png" alt="">
+                  <img src="../assets/img/portfolio/video-frame-interpolation/2.png" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="../assets/img/portfolio/vast-mc/3.png" alt="">
+                  <img src="../assets/img/portfolio/video-frame-interpolation/3.png" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="../assets/img/portfolio/vast-mc/4.png" alt="">
+                  <img src="../assets/img/portfolio/video-frame-interpolation/4.png" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="../assets/img/portfolio/vast-mc/5.png" alt="">
+                  <img src="../assets/img/portfolio/video-frame-interpolation/5.png" alt="">
                 </div>
 
-                <div class="swiper-slide">
+                <!-- <div class="swiper-slide">
                   <img src="../assets/img/portfolio/vast-mc/6.png" alt="">
                 </div>
 
                 <div class="swiper-slide">
                   <img src="../assets/img/portfolio/vast-mc/7.png" alt="">
-                </div>
+                </div> -->
 
               </div>
               <div class="swiper-pagination"></div>
@@ -162,7 +162,10 @@
             <div class="portfolio-description" data-aos="fade-up" data-aos-delay="300">
               <h2>Project Description</h2>
               <p>
-                For the VAST Challenge 2021 Mini-Challenge 2, I focused on analyzing the disappearance of GAStech employees by leveraging geospatial and transaction data. My role involved creating a graphical analytics system that included seven visualizations designed to uncover patterns of suspicious behavior among employees. Using D3.js and Python Flask, I implemented features like a symbol map, stacked bar charts, and heat maps to visualize movement and transaction data effectively. I also optimized data processing to enhance responsiveness, ensuring that complex queries could be addressed efficiently. This project not only honed my skills in data visualization but also deepened my understanding of geospatial analysis and its practical applications in real-world scenarios.
+                This project enhances video frame interpolation by using a convolutional neural network (CNN) to estimate two 1D kernels, reducing memory requirements compared to traditional 2D kernel methods. We extracted consecutive frames from YouTube videos and applied data augmentation techniques to create a training dataset.
+              </p>
+              <p>
+                A custom loss function combining L1 loss, VGG19 features, and SSIM was developed to improve perceptual accuracy, resulting in sharper interpolated images. The model performed well on real-life videos with moderate motion, though challenges arose with larger motions and high-resolution inputs. This work provides an efficient solution for high-quality video frame interpolation.
               </p>
             </div>
           </div>
