Added the Arrhythmia Classification Project

--- a/portfolio/arrhythmia-classification.html
+++ b/portfolio/arrhythmia-classification.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>Video Frame Interpolation</title>
+  <title>Arrhythmia Classification</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -78,7 +78,7 @@
     <!-- Page Title -->
     <div class="page-title dark-background">
       <div class="container d-lg-flex justify-content-between align-items-center">
-        <h1 class="mb-2 mb-lg-0">Video Frame Interpolation Through Adaptive Separable Convolution</h1>
+        <h1 class="mb-2 mb-lg-0">Arrhythmia Classification</h1>
         <nav class="breadcrumbs">
           <ol>
             <li><a href="../index.html">Home</a></li>
@@ -117,32 +117,28 @@
               <div class="swiper-wrapper align-items-center">
 
                 <div class="swiper-slide">
-                  <img src="../assets/img/portfolio/video-frame-interpolation/1.png" alt="">
+                  <img src="../assets/img/portfolio/arrhythmia-classification/1.png" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="../assets/img/portfolio/video-frame-interpolation/2.png" alt="">
+                  <img src="../assets/img/portfolio/arrhythmia-classification/2.png" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="../assets/img/portfolio/video-frame-interpolation/3.png" alt="">
+                  <img src="../assets/img/portfolio/arrhythmia-classification/3.png" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="../assets/img/portfolio/video-frame-interpolation/4.png" alt="">
+                  <img src="../assets/img/portfolio/arrhythmia-classification/4.png" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="../assets/img/portfolio/video-frame-interpolation/5.png" alt="">
-                </div>
-
-                <!-- <div class="swiper-slide">
-                  <img src="../assets/img/portfolio/vast-mc/6.png" alt="">
+                  <img src="../assets/img/portfolio/arrhythmia-classification/5.png" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="../assets/img/portfolio/vast-mc/7.png" alt="">
-                </div> -->
+                  <img src="../assets/img/portfolio/arrhythmia-classification/6.png" alt="">
+                </div>
 
               </div>
               <div class="swiper-pagination"></div>
@@ -153,19 +149,16 @@
             <div class="portfolio-info" data-aos="fade-up" data-aos-delay="200">
               <h3>Project information</h3>
               <ul>
-                <li><strong>Category</strong>: Data Visualization</li>
-                <li><strong>Project start date</strong>: August 2023</li>
-                <li><strong>Project end date</strong>: December 2023</li>
+                <li><strong>Category</strong>: Statistical Machine Learning</li>
+                <li><strong>Project start date</strong>: September 2022</li>
+                <li><strong>Project end date</strong>: Devember 2022</li>
                 <!-- <li><strong>Project URL</strong>: <a href="#">www.example.com</a></li> -->
               </ul>
             </div>
             <div class="portfolio-description" data-aos="fade-up" data-aos-delay="300">
               <h2>Project Description</h2>
               <p>
-                This project enhances video frame interpolation by using a convolutional neural network (CNN) to estimate two 1D kernels, reducing memory requirements compared to traditional 2D kernel methods. We extracted consecutive frames from YouTube videos and applied data augmentation techniques to create a training dataset.
-              </p>
-              <p>
-                A custom loss function combining L1 loss, VGG19 features, and SSIM was developed to improve perceptual accuracy, resulting in sharper interpolated images. The model performed well on real-life videos with moderate motion, though challenges arose with larger motions and high-resolution inputs. This work provides an efficient solution for high-quality video frame interpolation.
+                This project focuses on classifying arrhythmia, an irregular heartbeat condition, using the MIT-BIH Arrhythmia dataset. Various supervised learning models, including Naive Bayes, Decision Tree, 1D-CNN, and Deep Neural Networks, were employed. The key challenge addressed was class imbalance, with 75% of the data representing normal heartbeats. Data augmentation and reduction techniques were applied for fairness. 1D-CNN proved most effective, achieving high accuracy and recall in classifying arrhythmia types, offering a robust solution for real-time ECG signal analysis.
               </p>
             </div>
           </div>
