--- a/index.html
+++ b/index.html
@@ -504,6 +504,19 @@
             </div>
             <!-- End Portfolio Item -->
 
+            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-ml">
+              <div class="portfolio-content h-100">
+                <img src="assets/img/portfolio/arrhythmia-classification/1.png" class="img-fluid" alt="">
+                <div class="portfolio-info">
+                  <h4>Arrhythmia Classification</h4>
+                  <p>Statistical Machine Learning</p>
+                  <a href="assets/img/portfolio/arrhythmia-classification/1.png" title="Arrhythmia Classification" data-gallery="portfolio-gallery-ml" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                  <a href="./portfolio/arrhythmia-classification.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                </div>
+              </div>
+            </div>
+            <!-- End Portfolio Item -->
+
             <!-- <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-cloud">
               <div class="portfolio-content h-100">
                 <img src="assets/img/portfolio/branding-1.jpg" class="img-fluid" alt="">
