Added AI Image Colorization

--- a/index.html
+++ b/index.html
@@ -530,6 +530,19 @@
             </div>
             <!-- End Portfolio Item -->
 
+            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-ml">
+              <div class="portfolio-content h-100">
+                <img src="assets/img/portfolio/ai-color/1.png" class="img-fluid" alt="">
+                <div class="portfolio-info">
+                  <h4>AI Image Colorization</h4>
+                  <p>Image Processing &amp; Machine Learning</p>
+                  <a href="assets/img/portfolio/ai-color/1.png" title="AI Image Colorization" data-gallery="portfolio-gallery-ml" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                  <a href="./portfolio/ai-color.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                </div>
+              </div>
+            </div>
+            <!-- End Portfolio Item -->
+
             <!-- <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-cloud">
               <div class="portfolio-content h-100">
                 <img src="assets/img/portfolio/branding-1.jpg" class="img-fluid" alt="">
