Created js for Google Analytics

--- a/portfolio/vast-mc2.html
+++ b/portfolio/vast-mc2.html
@@ -4,13 +4,8 @@
 <head>
   <!-- Google tag (gtag.js) -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-L5QJ6RCCZZ"></script>
-  <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
-    gtag('js', new Date());
-
-    gtag('config', 'G-L5QJ6RCCZZ');
-  </script>
+  <script src="assets/js/analytics.js"></script>
+  
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
   <title>Vast 2021 Mini-Challenge 2</title>
