Added favicons for all pages

--- a/src/index.html
+++ b/src/index.html
@@ -1,3 +1,6 @@
+---
+---
+
 <!DOCTYPE html>
 <html lang="en">
 
@@ -470,7 +473,7 @@
                   <h4>VAST 2021 Mini-Challenge 2</h4>
                   <p>Data Visualization</p>
                   <a href="assets/img/portfolio/vast-mc/1.png" title="VAST 2021 Mini-Challenge 2" data-gallery="portfolio-gallery-web-dev" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                  <a href="./portfolio/vast-mc2" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                  <a href="./portfolio/vast-mc2.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
                 </div>
               </div>
             </div><!-- End Portfolio Item -->
