updated links on index page

--- a/src/index.html
+++ b/src/index.html
@@ -57,7 +57,7 @@
       <img src="assets/img/my-profile-img.jpg" alt="" class="img-fluid rounded-circle">
     </div>
 
-    <a href="./" class="logo d-flex align-items-center justify-content-center">
+    <a href="{{ '/' | url }}" class="logo d-flex align-items-center justify-content-center">
       <!-- Uncomment the line below if you also wish to use an image logo -->
       <!-- <img src="assets/img/logo.png" alt=""> -->
       <h1 class="sitename">Deval Pandya</h1>
@@ -154,7 +154,7 @@
                   <li><i class="bi bi-chevron-right"></i> <strong>Major:</strong> <span>Computer Science</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span><a href="mailto:devaljpandya@gmail.com">devaljpandya@gmail.com</a></span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span><a href="tel:+15124120861">+1-512-412-0861</a></span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span><a href="pandyadeval.github.io" target="_blank">pandyadeval.github.io</a></span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span><a href="{{ '/' | url }}">pandyadeval.github.io</a></span></li>
                 </ul>
               </div>
           </div>
@@ -473,7 +473,7 @@
                   <h4>VAST 2021 Mini-Challenge 2</h4>
                   <p>Data Visualization</p>
                   <a href="assets/img/portfolio/vast-mc/1.png" title="VAST 2021 Mini-Challenge 2" data-gallery="portfolio-gallery-web-dev" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                  <a href="./portfolio/vast-mc2.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                  <a href="{{ './portfolio/vast-mc2' | url }}" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
                 </div>
               </div>
             </div><!-- End Portfolio Item -->
@@ -485,7 +485,7 @@
                   <h4>Video Frame Interpolation</h4>
                   <p>Digital Video Processing</p>
                   <a href="assets/img/portfolio/video-frame-interpolation/1.png" title="Video Frame Interpolation" data-gallery="portfolio-gallery-ml" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                  <a href="./portfolio/video-frame-interpolation.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                  <a href="{{ './portfolio/video-frame-interpolation' | url }}" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
                 </div>
               </div>
             </div>
@@ -498,7 +498,7 @@
                   <h4>Hybrid Cloud Image Processing</h4>
                   <p>AWS &amp; OpenStack</p>
                   <a href="assets/img/portfolio/hybrid-cloud/1.png" title="Hybrid Cloud Image Processing" data-gallery="portfolio-gallery-cloud" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                  <a href="./portfolio/hybrid-cloud.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                  <a href="{{ './portfolio/hybrid-cloud' | url }}" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
                 </div>
               </div>
             </div><!-- End Portfolio Item -->
@@ -510,7 +510,7 @@
                   <h4>Arrhythmia Classification</h4>
                   <p>Statistical Machine Learning</p>
                   <a href="assets/img/portfolio/arrhythmia-classification/1.png" title="Arrhythmia Classification" data-gallery="portfolio-gallery-ml" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                  <a href="./portfolio/arrhythmia-classification.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                  <a href="{{ './portfolio/arrhythmia-classification' | url }}" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
                 </div>
               </div>
             </div>
@@ -523,7 +523,7 @@
                   <h4>Sentiment Analysis on Social Media Text</h4>
                   <p>Natural Language Processing</p>
                   <a href="assets/img/portfolio/sentiment-analysis/1.png" title="Sentiment Analysis on Social Media Text" data-gallery="portfolio-gallery-ml" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                  <a href="./portfolio/sentiment-analysis.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                  <a href="{{ './portfolio/sentiment-analysis' | url }}" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
                 </div>
               </div>
             </div>
@@ -536,7 +536,7 @@
                   <h4>AI Image Colorization</h4>
                   <p>Image Processing &amp; Machine Learning</p>
                   <a href="assets/img/portfolio/ai-color/1.png" title="AI Image Colorization" data-gallery="portfolio-gallery-ml" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                  <a href="./portfolio/ai-color.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                  <a href="{{ './portfolio/ai-color' | url }}" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
                 </div>
               </div>
             </div>
@@ -549,7 +549,7 @@
                   <h4>Chatbot as Personal Assistant</h4>
                   <p>Natural Language Processing</p>
                   <a href="assets/img/portfolio/virtual-assistant/1.png" title="Chatbot as Personal Assistant" data-gallery="portfolio-gallery-ml" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                  <a href="./portfolio/virtual-assistant.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                  <a href="{{ './portfolio/virtual-assistant' | url }}" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
                 </div>
               </div>
             </div>
@@ -562,7 +562,7 @@
                   <h4>Blogging Site</h4>
                   <p>PHP Application</p>
                   <a href="assets/img/portfolio/blog-site/1.png" title="Blogging Site" data-gallery="portfolio-gallery-web-dev" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                  <a href="./portfolio/blog-site.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                  <a href="{{ './portfolio/blog-site' | url }}" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
                 </div>
               </div>
             </div><!-- End Portfolio Item -->
@@ -574,7 +574,7 @@
                   <h4>Online Examination System</h4>
                   <p>PHP Application</p>
                   <a href="assets/img/portfolio/online-exam-system/1.png" title="Online Examination System" data-gallery="portfolio-gallery-web-dev" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                  <a href="./portfolio/online-examination-system.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                  <a href="{{ './portfolio/online-examination-system' | url }}" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
                 </div>
               </div>
             </div><!-- End Portfolio Item -->
