Finished rendering the whole index page with templates and json data

--- a/src/portfolio/hybrid-cloud.html
+++ b/src/portfolio/hybrid-cloud.html
@@ -59,7 +59,7 @@ body-class: portfolio-details-page
         <div class="portfolio-info" data-aos="fade-up" data-aos-delay="200">
           <h3>Project information</h3>
           <ul>
-            <li><strong>Category</strong>: AWS &amp; OpenStack</li>
+            <li><strong>Category</strong>: Cloud Computing</li>
             <li><strong>Project start date</strong>: August 2022</li>
             <li><strong>Project end date</strong>: December 2022</li>
             <!-- <li><strong>Project URL</strong>: <a href="#">www.example.com</a></li> -->
