--- a/src/index.html
+++ b/src/index.html
@@ -13,147 +13,6 @@ body-class: index-page
 
 {% render "resume-section.html", resume: resume, about-me: about-me %}
 
-<!-- Portfolio Section -->
-<section id="portfolio" class="portfolio section light-background">
+{% render "portfolio-section.html", portfolio: portfolio %}
 
-  <!-- Section Title -->
-  <div class="container section-title" data-aos="fade-up">
-    <h2>Portfolio</h2>
-  </div><!-- End Section Title -->
-
-  <div class="container">
-
-    <div class="isotope-layout" data-default-filter="*" data-layout="masonry" data-sort="original-order">
-
-      <ul class="portfolio-filters isotope-filters" data-aos="fade-up" data-aos-delay="100">
-        <li data-filter="*" class="filter-active">All</li>
-        <li data-filter=".filter-web-dev">Web Developement</li>
-        <li data-filter=".filter-ml">Machine Learning</li>
-        <li data-filter=".filter-cloud">Cloud Computing</li>
-        <!-- <li data-filter=".filter-embedded">Embedded Systems</li> -->
-      </ul><!-- End Portfolio Filters -->
-
-      <div class="row gy-4 isotope-container" data-aos="fade-up" data-aos-delay="200">
-
-        <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-web-dev">
-          <div class="portfolio-content h-100">
-            <img src="assets/img/portfolio/vast-mc/1.png" class="img-fluid" alt="">
-            <div class="portfolio-info">
-              <h4>VAST 2021 Mini-Challenge 2</h4>
-              <p>Data Visualization</p>
-              <a href="assets/img/portfolio/vast-mc/1.png" title="VAST 2021 Mini-Challenge 2" data-gallery="portfolio-gallery-web-dev" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-              <a href="{{ './portfolio/vast-mc2' | url }}" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
-            </div>
-          </div>
-        </div><!-- End Portfolio Item -->
-
-        <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-ml">
-          <div class="portfolio-content h-100">
-            <img src="assets/img/portfolio/video-frame-interpolation/1.png" class="img-fluid" alt="">
-            <div class="portfolio-info">
-              <h4>Video Frame Interpolation</h4>
-              <p>Digital Video Processing</p>
-              <a href="assets/img/portfolio/video-frame-interpolation/1.png" title="Video Frame Interpolation" data-gallery="portfolio-gallery-ml" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-              <a href="{{ './portfolio/video-frame-interpolation' | url }}" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
-            </div>
-          </div>
-        </div>
-        <!-- End Portfolio Item -->
-
-        <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-cloud">
-          <div class="portfolio-content h-100">
-            <img src="assets/img/portfolio/hybrid-cloud/1.png" class="img-fluid" alt="">
-            <div class="portfolio-info">
-              <h4>Hybrid Cloud Image Processing</h4>
-              <p>AWS &amp; OpenStack</p>
-              <a href="assets/img/portfolio/hybrid-cloud/1.png" title="Hybrid Cloud Image Processing" data-gallery="portfolio-gallery-cloud" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-              <a href="{{ './portfolio/hybrid-cloud' | url }}" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
-            </div>
-          </div>
-        </div><!-- End Portfolio Item -->
-
-        <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-ml">
-          <div class="portfolio-content h-100">
-            <img src="assets/img/portfolio/arrhythmia-classification/1.png" class="img-fluid" alt="">
-            <div class="portfolio-info">
-              <h4>Arrhythmia Classification</h4>
-              <p>Statistical Machine Learning</p>
-              <a href="assets/img/portfolio/arrhythmia-classification/1.png" title="Arrhythmia Classification" data-gallery="portfolio-gallery-ml" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-              <a href="{{ './portfolio/arrhythmia-classification' | url }}" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
-            </div>
-          </div>
-        </div>
-        <!-- End Portfolio Item -->
-
-        <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-ml">
-          <div class="portfolio-content h-100">
-            <img src="assets/img/portfolio/sentiment-analysis/1.png" class="img-fluid" alt="">
-            <div class="portfolio-info">
-              <h4>Sentiment Analysis on Social Media Text</h4>
-              <p>Natural Language Processing</p>
-              <a href="assets/img/portfolio/sentiment-analysis/1.png" title="Sentiment Analysis on Social Media Text" data-gallery="portfolio-gallery-ml" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-              <a href="{{ './portfolio/sentiment-analysis' | url }}" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
-            </div>
-          </div>
-        </div>
-        <!-- End Portfolio Item -->
-
-        <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-ml">
-          <div class="portfolio-content h-100">
-            <img src="assets/img/portfolio/ai-color/1.png" class="img-fluid" alt="">
-            <div class="portfolio-info">
-              <h4>AI Image Colorization</h4>
-              <p>Image Processing &amp; Machine Learning</p>
-              <a href="assets/img/portfolio/ai-color/1.png" title="AI Image Colorization" data-gallery="portfolio-gallery-ml" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-              <a href="{{ './portfolio/ai-color' | url }}" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
-            </div>
-          </div>
-        </div>
-        <!-- End Portfolio Item -->
-
-        <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-ml">
-          <div class="portfolio-content h-100">
-            <img src="assets/img/portfolio/virtual-assistant/1.png" class="img-fluid" alt="">
-            <div class="portfolio-info">
-              <h4>Chatbot as Personal Assistant</h4>
-              <p>Natural Language Processing</p>
-              <a href="assets/img/portfolio/virtual-assistant/1.png" title="Chatbot as Personal Assistant" data-gallery="portfolio-gallery-ml" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-              <a href="{{ './portfolio/virtual-assistant' | url }}" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
-            </div>
-          </div>
-        </div>
-        <!-- End Portfolio Item -->
-
-        <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-web-dev">
-          <div class="portfolio-content h-100">
-            <img src="assets/img/portfolio/blog-site/1.png" class="img-fluid" alt="">
-            <div class="portfolio-info">
-              <h4>Blogging Site</h4>
-              <p>PHP Application</p>
-              <a href="assets/img/portfolio/blog-site/1.png" title="Blogging Site" data-gallery="portfolio-gallery-web-dev" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-              <a href="{{ './portfolio/blog-site' | url }}" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
-            </div>
-          </div>
-        </div><!-- End Portfolio Item -->
-
-        <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-web-dev">
-          <div class="portfolio-content h-100">
-            <img src="assets/img/portfolio/online-exam-system/1.png" class="img-fluid" alt="">
-            <div class="portfolio-info">
-              <h4>Online Examination System</h4>
-              <p>PHP Application</p>
-              <a href="assets/img/portfolio/online-exam-system/1.png" title="Online Examination System" data-gallery="portfolio-gallery-web-dev" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-              <a href="{{ './portfolio/online-examination-system' | url }}" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
-            </div>
-          </div>
-        </div><!-- End Portfolio Item -->
-
-      </div><!-- End Portfolio Container -->
-
-    </div>
-
-  </div>
-
-</section><!-- /Portfolio Section -->
-
-{% include "contact-section.html", about-me: about-me %}
+{% render "contact-section.html", about-me: about-me %}
