Created layout for portfolio details page and updated all pages to use it

--- a/src/portfolio/ai-color.html
+++ b/src/portfolio/ai-color.html
@@ -1,91 +1,4 @@
 ---
-title: AI Image Colorization
-layout: base.html
-body-class: portfolio-details-page
+project-key: ai-color
+layout: portfolio-details-layout.html
 ---
-
-<!-- Page Title -->
-<div class="page-title dark-background">
-  <div class="container d-lg-flex justify-content-between align-items-center">
-    <h1 class="mb-2 mb-lg-0">{{ title  }}</h1>
-    <nav class="breadcrumbs">
-      <ol>
-        <li><a href="{{ '/' | url }}">Home</a></li>
-        <li class="current">Portfolio Details</li>
-      </ol>
-    </nav>
-  </div>
-</div><!-- End Page Title -->
-
-<!-- Portfolio Details Section -->
-<section id="portfolio-details" class="portfolio-details section">
-
-  <div class="container" data-aos="fade-up" data-aos-delay="100">
-
-    <div class="row gy-4">
-
-      <div class="col-lg-8">
-        <div class="portfolio-details-slider swiper init-swiper">
-
-          <script type="application/json" class="swiper-config">
-            {
-              "loop": true,
-              "speed": 600,
-              "autoplay": {
-                "delay": 5000
-              },
-              "slidesPerView": "auto",
-              "pagination": {
-                "el": ".swiper-pagination",
-                "type": "bullets",
-                "clickable": true
-              }
-            }
-          </script>
-
-          <div class="swiper-wrapper align-items-center">
-
-            <div class="swiper-slide">
-              <img src="/assets/img/portfolio/ai-color/1.png" alt="">
-            </div>
-
-            <div class="swiper-slide">
-              <img src="/assets/img/portfolio/ai-color/2.png" alt="">
-            </div>
-
-            <div class="swiper-slide">
-              <img src="/assets/img/portfolio/ai-color/3.png" alt="">
-            </div>
-
-            <div class="swiper-slide">
-              <img src="/assets/img/portfolio/ai-color/4.png" alt="">
-            </div>
-
-          </div>
-          <div class="swiper-pagination"></div>
-        </div>
-      </div>
-
-      <div class="col-lg-4">
-        <div class="portfolio-info" data-aos="fade-up" data-aos-delay="200">
-          <h3>Project information</h3>
-          <ul>
-            <li><strong>Category</strong>: Image Processing &amp; Machine Learning</li>
-            <li><strong>Project start date</strong>: August 2018</li>
-            <li><strong>Project end date</strong>: March 2019</li>
-            <!-- <li><strong>Project URL</strong>: <a href="#">www.example.com</a></li> -->
-          </ul>
-        </div>
-        <div class="portfolio-description" data-aos="fade-up" data-aos-delay="300">
-          <h2>Project Description</h2>
-          <p>
-            This project, AI Image Colorization, focuses on using machine learning techniques to automatically colorize black-and-white images. Conducted over six months (August 2018 to January 2019), the project aimed to develop a model capable of predicting realistic colors for grayscale images. We followed a structured process, including data collection, neural network model creation, and multiple iterations to improve accuracy. A convolutional neural network (CNN) was employed to process image channels, and the project advanced to using UNET and GAN models for better results. This work was guided by Team Drishti, with future plans to enhance the model's capabilities using additional computing resources.
-          </p>
-        </div>
-      </div>
-
-    </div>
-
-  </div>
-
-</section><!-- /Portfolio Details Section -->
