--- a/src/portfolio/arrhythmia-classification.html
+++ b/src/portfolio/arrhythmia-classification.html
@@ -1,100 +1,4 @@
 ---
-title: Arrhythmia Classification
-layout: base.html
-body-class: portfolio-details-page
+project-key: arrhythmia-classification
+layout: portfolio-details-layout.html
 ---
-
-
-<!-- Page Title -->
-<div class="page-title dark-background">
-  <div class="container d-lg-flex justify-content-between align-items-center">
-    <h1 class="mb-2 mb-lg-0">{{ title }}</h1>
-    <nav class="breadcrumbs">
-      <ol>
-        <li><a href="/">Home</a></li>
-        <li class="current">Portfolio Details</li>
-      </ol>
-    </nav>
-  </div>
-</div><!-- End Page Title -->
-
-<!-- Portfolio Details Section -->
-<section id="portfolio-details" class="portfolio-details section">
-
-  <div class="container" data-aos="fade-up" data-aos-delay="100">
-
-    <div class="row gy-4">
-
-      <div class="col-lg-8">
-        <div class="portfolio-details-slider swiper init-swiper">
-
-          <script type="application/json" class="swiper-config">
-            {
-              "loop": true,
-              "speed": 600,
-              "autoplay": {
-                "delay": 5000
-              },
-              "slidesPerView": "auto",
-              "pagination": {
-                "el": ".swiper-pagination",
-                "type": "bullets",
-                "clickable": true
-              }
-            }
-          </script>
-
-          <div class="swiper-wrapper align-items-center">
-
-            <div class="swiper-slide">
-              <img src="/assets/img/portfolio/arrhythmia-classification/1.png" alt="">
-            </div>
-
-            <div class="swiper-slide">
-              <img src="/assets/img/portfolio/arrhythmia-classification/2.png" alt="">
-            </div>
-
-            <div class="swiper-slide">
-              <img src="/assets/img/portfolio/arrhythmia-classification/3.png" alt="">
-            </div>
-
-            <div class="swiper-slide">
-              <img src="/assets/img/portfolio/arrhythmia-classification/4.png" alt="">
-            </div>
-
-            <div class="swiper-slide">
-              <img src="/assets/img/portfolio/arrhythmia-classification/5.png" alt="">
-            </div>
-
-            <div class="swiper-slide">
-              <img src="/assets/img/portfolio/arrhythmia-classification/6.png" alt="">
-            </div>
-
-          </div>
-          <div class="swiper-pagination"></div>
-        </div>
-      </div>
-
-      <div class="col-lg-4">
-        <div class="portfolio-info" data-aos="fade-up" data-aos-delay="200">
-          <h3>Project information</h3>
-          <ul>
-            <li><strong>Category</strong>: Statistical Machine Learning</li>
-            <li><strong>Project start date</strong>: September 2022</li>
-            <li><strong>Project end date</strong>: Devember 2022</li>
-            <!-- <li><strong>Project URL</strong>: <a href="#">www.example.com</a></li> -->
-          </ul>
-        </div>
-        <div class="portfolio-description" data-aos="fade-up" data-aos-delay="300">
-          <h2>Project Description</h2>
-          <p>
-            This project focuses on classifying arrhythmia, an irregular heartbeat condition, using the MIT-BIH Arrhythmia dataset. Various supervised learning models, including Naive Bayes, Decision Tree, 1D-CNN, and Deep Neural Networks, were employed. The key challenge addressed was class imbalance, with 75% of the data representing normal heartbeats. Data augmentation and reduction techniques were applied for fairness. 1D-CNN proved most effective, achieving high accuracy and recall in classifying arrhythmia types, offering a robust solution for real-time ECG signal analysis.
-          </p>
-        </div>
-      </div>
-
-    </div>
-
-  </div>
-
-</section><!-- /Portfolio Details Section -->
