--- a/src/portfolio/online-examination-system.html
+++ b/src/portfolio/online-examination-system.html
@@ -1,109 +1,4 @@
 ---
-title: Online Examination System
-layout: base.html
-body-class: portfolio-details-page
+project-key: online-examination-system
+layout: portfolio-details-layout.html
 ---
-
-
-<!-- Page Title -->
-<div class="page-title dark-background">
-  <div class="container d-lg-flex justify-content-between align-items-center">
-    <h1 class="mb-2 mb-lg-0">{{ title }}</h1>
-    <nav class="breadcrumbs">
-      <ol>
-        <li><a href="/">Home</a></li>
-        <li class="current">Portfolio Details</li>
-      </ol>
-    </nav>
-  </div>
-</div><!-- End Page Title -->
-
-<!-- Portfolio Details Section -->
-<section id="portfolio-details" class="portfolio-details section">
-
-  <div class="container" data-aos="fade-up" data-aos-delay="100">
-
-    <div class="row gy-4">
-
-      <div class="col-lg-8">
-        <div class="portfolio-details-slider swiper init-swiper">
-
-          <script type="application/json" class="swiper-config">
-            {
-              "loop": true,
-              "speed": 600,
-              "autoplay": {
-                "delay": 5000
-              },
-              "slidesPerView": "auto",
-              "pagination": {
-                "el": ".swiper-pagination",
-                "type": "bullets",
-                "clickable": true
-              }
-            }
-          </script>
-
-          <div class="swiper-wrapper align-items-center">
-
-            <div class="swiper-slide">
-              <img src="/assets/img/portfolio/online-exam-system/1.png" alt="">
-            </div>
-
-            <div class="swiper-slide">
-              <img src="/assets/img/portfolio/online-exam-system/2.png" alt="">
-            </div>
-
-            <div class="swiper-slide">
-              <img src="/assets/img/portfolio/online-exam-system/3.png" alt="">
-            </div>
-
-            <div class="swiper-slide">
-              <img src="/assets/img/portfolio/online-exam-system/4.png" alt="">
-            </div>
-
-            <div class="swiper-slide">
-              <img src="/assets/img/portfolio/online-exam-system/5.png" alt="">
-            </div>
-
-            <div class="swiper-slide">
-              <img src="/assets/img/portfolio/online-exam-system/6.png" alt="">
-            </div>
-
-            <div class="swiper-slide">
-              <img src="/assets/img/portfolio/online-exam-system/7.png" alt="">
-            </div>
-
-            <div class="swiper-slide">
-              <img src="/assets/img/portfolio/online-exam-system/8.png" alt="">
-            </div>
-
-          </div>
-        </div>
-          <div class="swiper-pagination"></div>
-        </div>
-
-        <div class="col-lg-4">
-            <div class="portfolio-info" data-aos="fade-up" data-aos-delay="200">
-              <h3>Project information</h3>
-              <ul>
-                <li><strong>Category</strong>: PHP Application</li>
-                <li><strong>Project start date</strong>: January 2018</li>
-                <li><strong>Project end date</strong>: May 2018</li>
-                <!-- <li><strong>Project URL</strong>: <a href="#">www.example.com</a></li> -->
-              </ul>
-            </div>
-            <div class="portfolio-description" data-aos="fade-up" data-aos-delay="300">
-              <h2>Project Description</h2>
-              <p>
-                This was one of the first web applications I developed. I developed an Online Exam System using the AMP stack (Apache, MySQL, PHP). The application includes a client-side interface where new users can register, access personalized student profiles, view subjects based on their academic year, and check results from previous tests. On the admin side, the system allows for the addition or removal of questions from the database, viewing results for all registered users, and access to the complete user database, ensuring efficient management of the examination process.
-              </p>
-            </div>
-          </div>
-      </div>
-
-    </div>
-
-  </div>
-
-</section><!-- /Portfolio Details Section -->
