--- a/src/portfolio/sentiment-analysis.html
+++ b/src/portfolio/sentiment-analysis.html
@@ -1,104 +1,4 @@
 ---
-title: Sentiment Analysis of Social Media Data
-layout: base.html
-body-class: portfolio-details-page
+project-key: sentiment-analysis
+layout: portfolio-details-layout.html
 ---
-
-
-<!-- Page Title -->
-<div class="page-title dark-background">
-  <div class="container d-lg-flex justify-content-between align-items-center">
-    <h1 class="mb-2 mb-lg-0">{{ title }}</h1>
-    <nav class="breadcrumbs">
-      <ol>
-        <li><a href="/">Home</a></li>
-        <li class="current">Portfolio Details</li>
-      </ol>
-    </nav>
-  </div>
-</div><!-- End Page Title -->
-
-<!-- Portfolio Details Section -->
-<section id="portfolio-details" class="portfolio-details section">
-
-  <div class="container" data-aos="fade-up" data-aos-delay="100">
-
-    <div class="row gy-4">
-
-      <div class="col-lg-8">
-        <div class="portfolio-details-slider swiper init-swiper">
-
-          <script type="application/json" class="swiper-config">
-            {
-              "loop": true,
-              "speed": 600,
-              "autoplay": {
-                "delay": 5000
-              },
-              "slidesPerView": "auto",
-              "pagination": {
-                "el": ".swiper-pagination",
-                "type": "bullets",
-                "clickable": true
-              }
-            }
-          </script>
-
-          <div class="swiper-wrapper align-items-center">
-
-            <div class="swiper-slide">
-              <img src="/assets/img/portfolio/sentiment-analysis/1.png" alt="">
-            </div>
-
-            <div class="swiper-slide">
-              <img src="/assets/img/portfolio/sentiment-analysis/2.png" alt="">
-            </div>
-
-            <div class="swiper-slide">
-              <img src="/assets/img/portfolio/sentiment-analysis/3.png" alt="">
-            </div>
-
-            <div class="swiper-slide">
-              <img src="/assets/img/portfolio/sentiment-analysis/4.png" alt="">
-            </div>
-
-            <div class="swiper-slide">
-              <img src="/assets/img/portfolio/sentiment-analysis/5.png" alt="">
-            </div>
-
-            <div class="swiper-slide">
-              <img src="/assets/img/portfolio/sentiment-analysis/6.png" alt="">
-            </div>
-
-            <div class="swiper-slide">
-              <img src="/assets/img/portfolio/sentiment-analysis/7.png" alt="">
-            </div>
-
-          </div>
-          <div class="swiper-pagination"></div>
-        </div>
-      </div>
-
-      <div class="col-lg-4">
-        <div class="portfolio-info" data-aos="fade-up" data-aos-delay="200">
-          <h3>Project information</h3>
-          <ul>
-            <li><strong>Category</strong>: Natural Language Processing</li>
-            <li><strong>Project start date</strong>: August 2019</li>
-            <li><strong>Project end date</strong>: May 2020</li>
-            <!-- <li><strong>Project URL</strong>: <a href="#">www.example.com</a></li> -->
-          </ul>
-        </div>
-        <div class="portfolio-description" data-aos="fade-up" data-aos-delay="300">
-          <h2>Project Description</h2>
-          <p>
-            This project explores Sentiment Analysis on Social Media Text using a graph-based database (Neo4j). By analyzing tweets obtained via the Twitter API, the sentiment values (positive, negative, or neutral) of users are determined. These sentiments are modeled in a graph database to study user behavior, establish connections, and understand trends in public opinion. Machine Learning techniques, including SVM and LSTM, are employed to classify sentiment and categorize tweets across topics like education, politics, and sports. This analysis can be applied in fields such as advertising, mental health monitoring, and customer sentiment analysis.
-          </p>
-        </div>
-      </div>
-
-    </div>
-
-  </div>
-
-</section><!-- /Portfolio Details Section -->
