--- a/src/portfolio/virtual-assistant.html
+++ b/src/portfolio/virtual-assistant.html
@@ -1,108 +1,4 @@
 ---
-title: Chatbot as Personal Assistant
-layout: base.html
-body-class: portfolio-details-page
+project-key: virtual-assistant
+layout: portfolio-details-layout.html
 ---
-
-
-<!-- Page Title -->
-<div class="page-title dark-background">
-  <div class="container d-lg-flex justify-content-between align-items-center">
-    <h1 class="mb-2 mb-lg-0">{{ title }}</h1>
-    <nav class="breadcrumbs">
-      <ol>
-        <li><a href="/">Home</a></li>
-        <li class="current">Portfolio Details</li>
-      </ol>
-    </nav>
-  </div>
-</div><!-- End Page Title -->
-
-<!-- Portfolio Details Section -->
-<section id="portfolio-details" class="portfolio-details section">
-
-  <div class="container" data-aos="fade-up" data-aos-delay="100">
-
-    <div class="row gy-4">
-
-      <div class="col-lg-8">
-        <div class="portfolio-details-slider swiper init-swiper">
-
-          <script type="application/json" class="swiper-config">
-            {
-              "loop": true,
-              "speed": 600,
-              "autoplay": {
-                "delay": 5000
-              },
-              "slidesPerView": "auto",
-              "pagination": {
-                "el": ".swiper-pagination",
-                "type": "bullets",
-                "clickable": true
-              }
-            }
-          </script>
-
-          <div class="swiper-wrapper align-items-center">
-
-            <div class="swiper-slide">
-              <img src="/assets/img/portfolio/virtual-assistant/1.png" alt="">
-            </div>
-
-            <div class="swiper-slide">
-              <img src="/assets/img/portfolio/virtual-assistant/2.png" alt="">
-            </div>
-
-            <div class="swiper-slide">
-              <img src="/assets/img/portfolio/virtual-assistant/3.png" alt="">
-            </div>
-
-            <div class="swiper-slide">
-              <img src="/assets/img/portfolio/virtual-assistant/4.png" alt="">
-            </div>
-
-            <div class="swiper-slide">
-              <img src="/assets/img/portfolio/virtual-assistant/5.png" alt="">
-            </div>
-
-            <div class="swiper-slide">
-              <img src="/assets/img/portfolio/virtual-assistant/6.png" alt="">
-            </div>
-
-            <div class="swiper-slide">
-              <img src="/assets/img/portfolio/virtual-assistant/7.png" alt="">
-            </div>
-
-            <div class="swiper-slide">
-              <img src="/assets/img/portfolio/virtual-assistant/8.png" alt="">
-            </div>
-
-          </div>
-          <div class="swiper-pagination"></div>
-        </div>
-      </div>
-
-      <div class="col-lg-4">
-        <div class="portfolio-info" data-aos="fade-up" data-aos-delay="200">
-          <h3>Project information</h3>
-          <ul>
-            <li><strong>Category</strong>: Natural Language Processing</li>
-            <li><strong>Project start date</strong>: January 2020</li>
-            <li><strong>Project end date</strong>: May 2020</li>
-            <!-- <li><strong>Project URL</strong>: <a href="#">www.example.com</a></li> -->
-          </ul>
-        </div>
-        <div class="portfolio-description" data-aos="fade-up" data-aos-delay="300">
-          <h2>Project Description</h2>
-          <p>
-            This project, titled "Chatbot as Personal Assistant," involves developing a chatbot capable of performing various tasks using Natural Language Processing (NLP), Artificial Intelligence (AI), and Machine Learning (ML). The chatbot offers functionalities such as setting reminders, telling jokes, providing weather updates, and performing web searches, among others. The system utilizes tokenization, entity extraction, and intent classification to interpret user queries and respond appropriately. Implemented using various NLP tools like SpacyTokenizer and CRFEntityExtractor, the project demonstrates the chatbot’s architecture, pipeline, and decision-making process using policies defined in the RASA framework.
-          </p>
-        </div>
-      </div>
-
-    </div>
-
-  </div>
-
-</section><!-- /Portfolio Details Section -->
